[metadata]
name = hiro_python_lib
# version = https://github.com/pypa/setuptools_scm/#setupcfg-usage
url = https://github.com/166MMX/hiro-python-library
description = HIRO Python Library
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
python = 3.9
keywords = python3
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find_namespace:
setup_requires = setuptools_scm
install_requires =
    cuid <= 0.3
    requests <= 2.25
    ijson <= 3.1.3
    websockets <= 8.1
tests_require =
    pytest
python_requires = >=3.9

[options.packages.find]
where = src
